--- a/Website dev/UP1.css
+++ b/Website dev/UP1.css
@@ -34,7 +34,7 @@ nav img{
 }
 .main-nav ul {
     display: grid;
-    grid-gap: 20px;
+    grid-gap: 5px;
     padding: 0;
     list-style: none;
     grid-template-columns: repeat(4,1fr);
@@ -61,7 +61,7 @@ nav img{
 
 .top-container {
     display: grid;
-    grid-gap: 20px;
+    grid-gap: 0;
     background: var(--dark);
     grid-template-areas:
     'picbox boxtext';
@@ -74,48 +74,135 @@ nav img{
     background-size: cover;
     background-position: center;
     padding: 20rem;
-    display:flex;
+    display:grid;
+    grid-template-columns: 400px;
     flex-direction: column;
     align-items: start;
     justify-content: center;
     box-shadow: var();
 }
 
-.textbox{
-    background: var(--primary);
+.boxtext{
+    background: var(--dark);
     display: grid;
     align-items: center;
     justify-items: center;
     box-shadow: var(--shadow);
-    padding: 1.5rem;
+    text-overflow: none;
   }
   
 .boxtext h1{
     text-align: center;
     background: var(--light);
-    font-size: 2.1rem;
-
+    font-size: 2.5rem;
 }
 .boxtext p{
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
+    margin: 10px;
+    color: var(--light);
 }
+
+/* section 1 */
+
+
+.boxess{
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    margin: 0px;
+    position: top;
+    text-decoration: none;
+    }
+
+.H-p{
+    font-size: 1.7rem;
+}
+
+.boxx{
+        background: var(--primary);
+        text-align: center;
+        padding: 5.5rem 2rem;
+        box-shadow: var(--shadow);
+        text-decoration: none;
+        color: var(--dark);
+        font-size: 1.2rem;
+        
+    }
+
+.footer{
+    text-align: center;
+    background: var(--dark);
+    color: var(--light);
+    padding: 40px;
+  }
 
 /* Media Queries */
 @media (max-width: 700px) {
     .top-container {
-      grid-template-areas:
-        'picbox textbox'
+        grid-template-columns: 500px; 
+        grid-template-areas:
+        'picbox'
+        'textbox'
     }
-  
+    .picbox {
+        grid-area: picbox;
+        min-height: auto;
+        background:url(img/martha-dominguez-de-gouveia-nMyM7fxpokE-unsplash.jpg) ;
+        background-size: cover;
+        background-position: center;
+        padding: 10rem;
+        display:grid;
+        grid-template-columns: 400px;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+        box-shadow: var();
+    }
     .main-nav ul {
-      grid-template-columns: 1fr;
+        grid-template-columns: 1fr;
+          display: grid;
+          grid-gap: 0px;
+          padding: 0;
+          list-style: none;
+      }
+      .boxess{
+        display: grid;
+        grid-gap: 5px;
+        grid-template-columns:500px;
+        margin: 0px;
+        position: top;
+        text-decoration: none;
+        }
+    
+    .H-p{
+        font-size: 1.7rem;
     }
-  }
-  
+    }
   @media (max-width: 500px) {
     .top-container {
-      grid-template-areas:
-        'picbox textbox'
+        grid-template-columns: 400px; 
+        grid-template-areas:
+        'picbox'
+        'textbox'
+    }
+    .main-nav ul {
+        grid-template-columns: 1fr;
+          display: grid;
+          grid-gap: 0px;
+          padding: 0;
+          list-style: none;
+      }
+      .boxess{
+        display: grid;
+        grid-gap: 5px;
+        grid-template-columns:300px;
+        margin: 0px;
+        position: top;
+        text-decoration: none;
+        }
+    
+    .H-p{
+        font-size: 1.7rem;
     }
   }
