--- a/Website dev/UP2.css
+++ b/Website dev/UP2.css
@@ -1,8 +1,8 @@
 /* css variables(Repating things that will be use) */
 :root{ /* root use for making a global statement so everything that's is inside of it can be use for anything if you make a statment for it in another code*/
-    --primary:#ddd;
+    --primary:#dddddd;
     --dark:#333333;
-    --light:#fff;
+    --light:#ffffff;
     --shadow: 0 1px 5px rgba(104,104,104, 0.8);
     
 }
@@ -33,7 +33,7 @@ nav img{
 }
 .main-nav ul {
     display: grid;
-    grid-gap: 20px;
+    grid-gap: 5px;
     padding: 0;
     list-style: none;
     grid-template-columns: repeat(4,1fr);
@@ -56,9 +56,10 @@ nav img{
     color: var(--light);
 }
 
+/*top container*/
 .top-container {
     display: grid;
-    grid-gap: 20px;
+    grid-gap: 0;
     background: var(--dark);
     grid-template-areas:
     'picbox textbox';
@@ -70,8 +71,9 @@ nav img{
     background:url(Img/national-cancer-institute-701-FJcjLAQ-unsplash.jpg) ;
     background-size: cover;
     background-position: center;
-    padding: 25rem;
+    padding: 20rem;
     display:grid;
+    grid-template-columns: 400px;
     flex-direction: column;
     align-items: start;
     justify-content: center;
@@ -79,31 +81,35 @@ nav img{
 }
 
 .textbox{
-    background: var(--primary);
+    background: var(--dark);
     display: grid;
     align-items: center;
     justify-items: center;
     box-shadow: var(--shadow);
-    padding: 1.5rem;
+    text-overflow: none;
   }
   
 .textbox h1{
     text-align: center;
     background: var(--light);
-    font-size: 2.1rem;
+    font-size: 2.5rem;
     
 
 }
 .textbox p{
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
+    color: var(--light);
 }
 
 /* section 1 */
 .boxes{
     display: grid;
-    grid-gap: 3px;
+    grid-gap: 5px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    margin: 0px;
+    position: top;
+    text-decoration: none;
     }
     
     .box{
@@ -111,16 +117,48 @@ nav img{
         text-align: center;
         padding: 5.5rem 2rem;
         box-shadow: var(--shadow);
+        text-decoration: none;
+        color: var(--dark);
         
     }
+    
+    .footer{
+        text-align: center;
+        background: var(--dark);
+        color: var(--light);
+        padding: 40px;
+      }
+
     /* Media Queries */
 @media (max-width: 700px) {
     .top-container {
+      grid-template-columns: 500px;  
       grid-template-areas:
-        'picbox textbox';
-        grid-template-columns: 1fr;
+        'picbox'
+        'textbox'
     }
-
+    
+    .main-nav ul {
+        grid-template-columns: 1fr;
+          display: grid;
+          grid-gap: 0px;
+          padding: 0;
+          list-style: none;
+      }
+      .picbox {
+        grid-area: picbox;
+        min-height: auto;
+        background:url(Img/national-cancer-institute-701-FJcjLAQ-unsplash.jpg) ;
+        background-size: cover;
+        background-position: center;
+        padding: 10rem;
+        display:grid;
+        grid-template-columns: 400px;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+        box-shadow: var();
+    }
     .boxes{
     grid-template-columns: 1fr;   
     }
@@ -132,10 +170,11 @@ nav img{
     }
   }
   
-  @media (max-width: 500px) {
-    .top-container {
-      grid-template-areas:
-        'picbox textbox';
-        grid-template-columns: 1fr;
-    }
-  }
+    @media (max-width: 500px) {
+        .top-container {
+        grid-template-columns: 500px;            
+          grid-template-areas:
+            'picbox'
+            'textbox'
+        }
+      }
