--- a/Website dev/UP3.css
+++ b/Website dev/UP3.css
@@ -63,10 +63,86 @@ nav img{
 }
 
 .textbox{
-    background: var(--primary);
+    background: var(--dark);
     display: grid;
     align-items: center;
     justify-items: center;
     box-shadow: var(--shadow);
     padding: 1.5rem;
+    text-align: center;
+    color: var(--light);
   }
+  /*Section 1*/
+
+  .boxess{
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    margin: 0px;
+    text-decoration: none;
+    }
+
+.H-p{
+    font-size: 1.7rem;
+}
+
+.boxx{
+        background: var(--primary);
+        text-align: center;
+        padding: 10.5rem 3rem;
+        box-shadow: var(--shadow);
+        text-decoration: none;
+        color: var(--dark);
+        font-size: 1.2rem;
+        
+    }
+    .btn{
+        background: var(--dark);
+        color: var(--light);
+        padding: 1rem 2rem;
+        text-decoration: none;
+        border: 0;
+        font-size: 40px;
+    }
+
+    .footer{
+        text-align: center;
+        background: var(--dark);
+        color: var(--light);
+        padding: 40px;
+      }
+      /* Media Queries */
+@media (max-width: 700px) {
+
+    .main-nav ul {
+        grid-template-columns: 1fr;
+          display: grid;
+          grid-gap: 0px;
+          padding: 0;
+          list-style: none;
+      }
+
+    .boxes{
+    grid-template-columns: 1fr;   
+    }
+    
+
+  
+    .main-nav ul {
+      grid-template-columns: 1fr;
+    }
+  
+  
+  .btn{
+    background: var(--dark);
+    color: var(--light);
+    padding: 1rem 2rem;
+    text-align: center;
+    text-decoration: none;
+    border: 0;
+    font-size: 30px;
+    display: block;
+    text-align: center;
+    margin: auto;
+      }
+}
