--- a/3.0/HP1.css
+++ b/3.0/HP1.css
@@ -18,7 +18,7 @@ body{
     line-height: 1.2; 
     
 }
-/* our button*/
+/* our button on the screen */
 .btn{
     background: var(--dark);
     color: var(--light);
@@ -52,7 +52,7 @@ nav img{
 .navbar-links {
     height: 100%;
 }
-/* setting how many columns that should be in line.*/
+/* setting how many columns that should be in line for our menu.*/
 .navbar-links ul {
     display: grid;
     grid-gap: 5px;
@@ -82,7 +82,7 @@ nav img{
     background: var(--dark);
     color: var(--light);
 }
-
+/* Obejtive that will serve as button for our hamburger menu*/
 /* .toggle-button {
     position: absolute;
     top: .75rem;
@@ -107,7 +107,8 @@ nav img{
 
 /* topcointer container*/
 
-/* the whole topcatainer is maaking my own layout as I fit with grids*/
+/* the whole topcatainer is maaking my own layout as I fit with grids, so if you want to placesomething beside each other you can define what their name, 
+after that place it in the container and what which it should come, It will be use alot more in other css files where I need to have 2 different obecjts beside each other*/
 .top-container {
     display: grid;
     grid-gap: 20px;
@@ -189,14 +190,6 @@ text-decoration: none;
           
     }
 
-/* .welcome-box{
-        grid-area: welcome-box;
-        min-height: 200px;
-        background:var(--primary);
-        display:flex;
-        flex-direction: column;
-        box-shadow: var(--shadow); */
-
 .footer{
     text-align: center;
     background: var(--dark);
@@ -206,7 +199,7 @@ text-decoration: none;
 
 /* Media Queries */
 /* define how the content should react when on different device. 
-everything that need to be resize or adjuste to a lower pixal device can be tweak right here with all the same options like all other code*/
+everything that need to be resize or adjuste to a lower pixal device can be tweak right here with all the same options like all other code. most the code in this reapating code from above, just changes slighty to surv smaller device*/
 @media (max-width: 700px) {
     .top-container {
       grid-template-areas:
