--- a/3.0/UP1.css
+++ b/3.0/UP1.css
@@ -27,12 +27,17 @@ img{
 }
 
 /* nav*/
+/* Making so our logo is at the top at the page*/
 nav img{
     display: block;
   margin-left: auto;
   margin-right: auto;
 }
-.main-nav ul {
+.navbar-links {
+    height: 100%;
+}
+/* setting how many columns that should be in line for our menu.*/
+.navbar-links ul {
     display: grid;
     grid-gap: 5px;
     padding: 0;
@@ -40,8 +45,12 @@ nav img{
     grid-template-columns: repeat(4,1fr);
 }
 
-.main-nav a{
-    background: var(--primary);
+.navbar-links li {
+    list-style: none;
+}
+/* Setting the ankers tags defition so it don't show it's blue outline **/
+.navbar-links a{
+   background: var(--primary);
     display: block;
     text-decoration: none;
     padding: 1rem;
@@ -52,7 +61,8 @@ nav img{
     box-shadow: var(--shadow);
 }
 
-.main-nav a:hover {
+/* making it changes color when mouse course moves ontop the objetive*/
+.navbar a:hover {
     background: var(--dark);
     color: var(--light);
 }
@@ -93,8 +103,8 @@ nav img{
   
 .boxtext h1{
     text-align: center;
-    background: var(--light);
     font-size: 2.5rem;
+    color: var(--light);
 }
 .boxtext p{
     text-align: center;
@@ -158,7 +168,7 @@ nav img{
         justify-content: center;
         box-shadow: var();
     }
-    .main-nav ul {
+    .navbar-links ul {
         grid-template-columns: 1fr;
           display: grid;
           grid-gap: 0px;
@@ -185,7 +195,7 @@ nav img{
         'picbox'
         'textbox'
     }
-    .main-nav ul {
+    .navbar-links ul {
         grid-template-columns: 1fr;
           display: grid;
           grid-gap: 0px;
