--- a/3.0/UP2.css
+++ b/3.0/UP2.css
@@ -30,12 +30,17 @@ img{
 }
 
 /* nav*/
+/* Making so our logo is at the top at the page*/
 nav img{
     display: block;
   margin-left: auto;
   margin-right: auto;
 }
-.main-nav ul {
+.navbar-links {
+    height: 100%;
+}
+/* setting how many columns that should be in line for our menu.*/
+.navbar-links ul {
     display: grid;
     grid-gap: 5px;
     padding: 0;
@@ -43,8 +48,12 @@ nav img{
     grid-template-columns: repeat(4,1fr);
 }
 
-.main-nav a{
-    background: var(--primary);
+.navbar-links li {
+    list-style: none;
+}
+/* Setting the ankers tags defition so it don't show it's blue outline **/
+.navbar-links a{
+   background: var(--primary);
     display: block;
     text-decoration: none;
     padding: 1rem;
@@ -55,7 +64,8 @@ nav img{
     box-shadow: var(--shadow);
 }
 
-.main-nav a:hover {
+/* making it changes color when mouse course moves ontop the objetive*/
+.navbar a:hover {
     background: var(--dark);
     color: var(--light);
 }
@@ -135,21 +145,32 @@ nav img{
 
     /* Media Queries */
 @media (max-width: 700px) {
+    .top-container {
+      grid-template-columns: 500px;  
+      grid-template-areas:
+        'picbox'
+        'textbox'
+    }
     
-    .main-nav ul {
+    .navbar-links ul {
         grid-template-columns: 1fr;
           display: grid;
           grid-gap: 0px;
           padding: 0;
           list-style: none;
       }
-      .top-container {
-        grid-template-columns: 1fr;
-        grid-template-areas:
-          'picbox'
-          'textbox';
-      }
-
+      .picbox {
+        grid-area: picbox;
+        min-height: auto;
+        background-size: cover;
+        background-position: center;
+        padding: 10rem;
+        display:grid;
+        grid-template-columns: 400px;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+        box-shadow: var();
     }
     .boxes{
     grid-template-columns: 1fr;   
@@ -160,29 +181,13 @@ nav img{
     .main-nav ul {
       grid-template-columns: 1fr;
     }
-  
+  }
   
     @media (max-width: 500px) {
         .top-container {
-            grid-template-columns: 500px ;            
+        grid-template-columns: 500px;            
           grid-template-areas:
             'picbox'
             'textbox'
-        }
-        .picbox {
-            grid-area: picbox;
-            min-height: auto;
-            background-size: cover;
-            background-position: center;
-            padding: 10rem;
-            display:grid;
-            grid-template-columns: 500px;
-            flex-direction: column;
-            align-items: start;
-            justify-content: center;
-            box-shadow: var();
-        }
-        .boxes{
-        grid-template-columns: 500px;   
         }
       }
